add new features

--- a/index.html
+++ b/index.html
@@ -1,11 +1,115 @@
-<!Doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Interactive Profile Page</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
+      color: #333;
+      transition: background 0.5s, color 0.5s;
+    }
+    header {
+      background: #333;
+      color: #fff;
+      padding: 1rem;
+      text-align: center;
+    }
+    nav a {
+      color: white;
+      margin: 0 10px;
+      text-decoration: none;
+    }
+    section {
+      padding: 2rem;
+      text-align: center;
+    }
+    button {
+      padding: 10px 20px;
+      margin-top: 10px;
+      border: none;
+      border-radius: 5px;
+      background: #333;
+      color: white;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #555;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background: #333;
+      color: white;
+    }
+    /* Dark mode */
+    .dark {
+      background-color: #1e1e1e;
+      color: #f4f4f4;
+    }
+    .dark header, .dark footer {
+      background: #111;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>My Interactive Page</h1>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#features">Features</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>Hello! 👋 I am learning web development and this is my interactive page.</p>
+  </section>
+
+  <section id="features">
+    <h2>Cool Features</h2>
+    <p>Current Time: <span id="time"></span></p>
+    <button onclick="toggleTheme()">Toggle Dark/Light Mode</button>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: <strong>you@example.com</strong></p>
+    <button onclick="sayHello()">Say Hello</button>
+    <p id="message"></p>
+  </section>
+
+  <footer>
+    <p>&copy; <span id="year"></span> My Interactive Page</p>
+  </footer>
+
+  <script>
+    // Show current year
+    document.getElementById("year").textContent = new Date().getFullYear();
+
+    // Show live time
+    function updateTime() {
+      const now = new Date();
+      document.getElementById("time").textContent = now.toLocaleTimeString();
+    }
+    setInterval(updateTime, 1000);
+    updateTime();
+
+    // Toggle Dark/Light Mode
+    function toggleTheme() {
+      document.body.classList.toggle("dark");
+    }
+
+    // Say Hello
+    function sayHello() {
+      document.getElementById("message").textContent = "Hello! Thanks for visiting 🎉";
+    }
+  </script>
+</body>
 </html>
+
